# neural_exocartography

./: .README.md.swp  README.md  db_libnoise.py  doplot_conv1d.py  doplot_earth.py  doplot_earth_clouds.py  doplot_earth_torch.py  earth_720.csv  model_denoise.py  model_denoise_clouds.py  neighbours_16.npy  noise  projection.py  projection_simple.py  projection_torch.py  spherical.py  tikhonov.py  train_denoise.py  train_denoise_clouds.py  validate.py
libnoise/: CMakeLists.txt  LICENSE.md  README.md
libnoise/src/: main.cpp  main.h
libnoise/src/Generator/: ComplexGenerator.cpp  ComplexGenerator.h  Generator.cpp  Generator.h  SimpleGenerator.cpp  SimpleGenerator.h
trained_denoise_1d/: 2020-10-14-08:23:11.pth
trained_denoise_2d/: 2020-10-26-16:34:23.pth
